Repaired bug on iphone with grey font.

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -107,6 +107,7 @@ header {
         display: inline-block;
         width: 100%;
         font-family: 'Roboto Condensed', sans-serif;
+        color:#251e2f;
         font-size: 0.9rem;
         padding: 1rem 2rem;
         border: none;
